Learned topological sort using BFS and solved some questions